# doodles

./: .gitignore  README.md  doodles.cabal
src/: ABT.hs  Flock.hs  Term.hs  Unify.hs  Var.hs
